# TrafficSimulation2025

./: .gitignore  CMakeLists.txt  README.md  Roa.h  TrafficLight.h  TrafficSimulation.h  VehicleGenerator.cpp  VehicleGenerator.h
Tests/: 1return meaning.txt  UpdateCycle.xml  generator_spacing.xml  inconsistent_road.xml  invalid_attributes.xml  invalid_element.xml  missingDataBusstop.xml  missingDataCrossroad.xml  missing_attribute.xml  multiple_generators.xml  multiple_lights.xml  simulation_data.xml  stop_distance.xml  traffic_light_cycle.xml  vehicle_exit.xml  vehicle_following.xml  vehicle_generator.xml  vehicle_movement.xml
gtest/include/: DesignByContract.h
src/: Bushalte.cpp  Bushalte.h  Constants.h  Kruispunt.cpp  Kruispunt.h  Road.cpp  Road.h  TrafficLight.cpp  TrafficLight.h  TrafficSimulation.cpp  TrafficSimulation.h  Vehicle.cpp  Vehicle.h  VehicleGenerator.cpp  VehicleGenerator.h  main.cpp
